--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
  
 <body>
     <!----------------- Top section-------------------- -->
+    <section class="moto">
+        <div class="container">
+            <h1 >INFLUENCER CARE</h1>
+            <p>Supporting the media influencers</p>
+        </div>
+    </section>
     <section>
         <div class="container">
             <div class="top-section">
