--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="moto">
         <div class="container">
             <h1 >INFLUENCER CARE</h1>
-            <p>Supporting the media influencers</p>
+            <p>Supporting the media influencers!</p>
         </div>
     </section>
     <section>
