--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="container">
             <h1 >INFLUENCER CARE</h1>
             <p>Supporting the media influencers!</p>
+            <img src="images/gear.png" alt="">
         </div>
     </section>
     <section>
