--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
  
 <body>
     <!----------------- Top section-------------------- -->
-    <section class="moto">
-        <div class="container">
+    <section>
+       <div class="container">
+        <div class="moto">
             <h1 >INFLUENCER CARE</h1>
             <p>Supporting the media influencers!</p>
-            <img src="images/gear.png" alt="">
+                <img src="images/gear.png" alt="">
         </div>
+       </div>
     </section>
     <section>
         <div class="container">
