--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class="title">Become an Influencer</h1>
                        
                     <P>Influencer Care is a Global Organisition,that help new or estiblished influencers to create more content.Our Aim is to Build a system that help influencers to Create more content hassle free by offering Digital Marketing,Camera Gears,Mentorships and more.</P>
-                    <a class="button" href="#">PreBook Now
+                    <a class="button" href="#">Join Now
                         <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
        
